<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in_background"
    >

    <TextView
        android:id="@+id/log_in_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/Register_text"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/log_in_text"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#673AB7"
        android:drawableStart="@drawable/baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:hint="@string/email_hint"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/password_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_log_in"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#673AB7"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="20dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:importantForAutofill="no"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:orientation="horizontal"
        android:weightSum="2">

    <Button
        android:id="@+id/Log_In_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/log_in_button_ripple"
        android:text="@string/Confirm_Sign_in"
        android:layout_marginEnd="5dp"
        tools:ignore="ButtonStyle" />

    <Button
        android:id="@+id/Register_Login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/register_button_ripple"
        android:text="@string/Cancel_Sign_in"
        android:layout_marginStart="5dp"
        tools:ignore="ButtonStyle" />
    </LinearLayout>

</RelativeLayout>